# LearnableFractalFlames

./: .gitignore  LICENSE  README.md  pyproject.toml
dfractal/: __init__.py  compositor.py  flame_sampler.py  mean_squared_error.py  painter.py  palette.py  pipeline.py  sampler.py  splatter.py  utils.py  variations.py
examples/: barnsley_fern.py  fighting_forms.py  linear_flame.py  nonlinear_flame.py  wisteria.py
images/: README.txt
